[package]
name = "nevermind"
description = "mind maps as code"
license = "MIT"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.18", features = ["derive"] }
yaml-rust = "0.4.5"

[profile.release]
strip = true
